# docassemble-PetitionToChangeNameMinorCJP25

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: run_form_tests.yml
docassemble/PetitionToChangeNameMinorCJP25/data/questions/: petition_to_name_change_minor_CJP25.yml
docassemble/PetitionToChangeNameMinorCJP25/data/sources/: Minor_namechange.feature  interviews_run.feature
docassemble/PetitionToChangeNameMinorCJP25/data/templates/: petition_to_name_change_minor_CJP25_next_steps.docx
